--- a/index.html
+++ b/index.html
@@ -1,3 +1,138 @@
 <!DOCTYPE html>
 
-<!-- Last Published: Sun Sep 08 2024 20:49:20 GMT+0000 (Coordinated Universal Time) --><html data-ff-page="66d75722586d170d079ab771"><head><meta charset="utf-8"/><title>volksjuryrip</title><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="style.css" rel="stylesheet" type="text/css"/><link href="https://fonts.googleapis.com" rel="preconnect"/><link crossorigin="anonymous" href="https://fonts.gstatic.com" rel="preconnect"/><script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script><script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"]  }});</script><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script><link href="./images/favicon.ico" rel="shortcut icon" type="image/x-icon"/><link href="./images/webclip.png" rel="apple-touch-icon"/></head><body class="body"><div class="section" data-w-id="7972d193-5b62-5d55-2c16-cf8a113af2ea"><div class="first-image" data-w-id="90e5916e-2a6a-832e-2b72-41d6965bde70"></div></div><section class="section divider pink"><div class="w-layout-blockcontainer container w-container"><div class="title-div"><h1 class="h1">Dag lieve <br/>volksjury fan!</h1><h2 class="h2">Wij zijn niet de meiden van de volksjury...<br/></h2></div></div></section><div class="section second-image" data-w-id="116f5406-1079-3236-dc55-b25abfc4d756"><div class="second-image"></div></div><section class="section about"><div class="w-layout-blockcontainer container w-container"><h2 class="h1 green">De Wabliefteru Podcast</h2><div class="info-div"><img src="./images/fotoklein.webp" width="570"/><div class="txt-div"><div class="rich-text-block w-richtext"><h3 class="h3">Een belachelijk interessante podcast</h3><p class="paragraph about">Zoals de slimste onder jullie wellicht wel hebben opgemerkt, wij zijn niet de volksjury... wij zijn Stephan, Yorrick, Maarten en Alexander van <strong>Wabliefteru?</strong></p><p class="paragraph about">Vier vrienden met één passie: lullen en lachen. </p><p class="paragraph about">Elke week brengt één van de jongens een nieuw onderwerp, van het leven van Leonardo da Vinci tot paradoxale wiskunde of van de Zillion discotheek tot bloederige bijlmoordenaars. </p><p class="paragraph">Ben je dus fan van de volksjury en zoek je nog een extra podcast in diezelfde aard</p><p class="paragraph">(met meer afleveringen en ook frequentere nieuwe afleveringen want wij brengen elke week een nieuwe aflevering uit, niet pas om de twee weken!)</p><p class="paragraph">staak dan je zoeken! JE HEBT ONS GEVONDEN!</p><p class="paragraph about">Gestart in 2020, is 'Wabliefteru?' uitgegroeid tot een wekelijkse bron van leerrijk plezier. Kom lachen, leren en luisteren naar Stephan, Yorrick, Maarten en Alexander!</p><p class="paragraph about">Wij hebben misschien nog geen 400.000 luisteraars maar dromen doet leven! Hopelijk zijn wij ooit ook zo succesvol als de volksjury. Maar tot dan moeten we het maar hebben van speciale marketingstechnieken zoals de fans van de volksjury in de val te lokken om ons publiek te doen groeien!</p></div><a class="luisterbutton w-button" href="https://open.spotify.com/show/7163qoNT9QZ88uAKmIFk6C?si=ed49c124a67a43df" target="_blank">BELUIStER DE PODCAST</a></div></div></div></section><section class="section third" data-w-id="d840f857-09e1-17bb-1750-8cf3243c1daf"><div class="third-image"></div></section><section class="section contact"><div class="w-layout-blockcontainer container contact w-container"><h2 class="h1 blue">Contact</h2><div class="p1 centered w-richtext"><h2 class="h2 contact">All things business &amp; press</h2><p class="paragraph">WIj hebben (nog) geen managmentkantoor zoals Working Class Heroes achter ons staan... dus voor alle zakelijke vragen, samenwerkingen, bookings en persaanvragen kan je terecht bij ons email adres:</p><p class="paragraph"><a href="mailto:info@wabliefteru.be?subject=Hey%20lieve%20en%20mooie%20jongens%20van%20Wabliefteru%3F%20Podcast">info@wabliefteru.be</a></p></div><div class="p1 centered w-richtext"><h2 class="h2 contact">Adverteren</h2><p class="paragraph">Wil je adverteren in onze podcast?</p><p class="paragraph">Dat kan en mag maar wij hebben ook nog geen advertienetwerk.</p><p class="paragraph">Dus ik zou zeggen stuur ons een mailtje en gratis stuff ofzo en dan regelen we wel iets. Alexander wil ook gerust iets laten tatoeëren op zijn kont voor het juiste bedrag... (het juiste bedrag ligt rond de €5)</p></div><div class="p1 centered w-richtext"><h2 class="h2 contact">Suggesties &amp; comments</h2><p class="paragraph">Heb je een suggestie voor de podcast</p><p class="paragraph">Wil je graag een comment achterlaten?</p><p class="paragraph">Dan kan je terecht bij onze Facebook Community:</p><p class="paragraph">‍<a href="https://www.facebook.com/groups/wabliefteru" target="_blank">De Wabliefteru discussiegroep</a></p></div></div></section><section class="section socials"><div class="w-layout-blockcontainer container socials w-container"><h2 class="h1 red">Volg Wabliefteru?</h2><div class="w-layout-layout quick-stack wf-layout-layout" id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba533-079ab771"><div class="w-layout-cell cell" id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba534-079ab771"><a class="w-inline-block" href="https://www.instagram.com/wabliefteru_podcast/" target="_blank"><img src="./images/icons8-instagram.svg" width="Auto"/></a></div><div class="w-layout-cell" id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba535-079ab771"><a class="w-inline-block" href="https://www.tiktok.com/@wabliefteru_podcast" target="_blank"><img src="./images/tiktok-svgrepo-com.svg"/></a></div><div class="w-layout-cell" id="w-node-e7227b05-7c01-5325-b27c-e3fb47183782-079ab771"><a class="w-inline-block" href="https://www.facebook.com/wabliefteru" target="_blank"><img src="./images/icons8-facebook.svg"/></a></div><div class="w-layout-cell" id="w-node-a9690431-223d-ac78-d47b-93d8dbb51691-079ab771"><a class="w-inline-block" href="https://twitter.com/wabliefteru"><img src="./images/icons8-twitterx.svg" width="Auto"/></a></div><div class="w-layout-cell" id="w-node-_2ce8b8ee-e316-fc22-3cfd-5071155c93cd-079ab771"><a class="w-inline-block" href="https://open.spotify.com/show/7163qoNT9QZ88uAKmIFk6C?si=82874ec6cbcf4c79" target="_blank"><img src="./images/icons8-spotify.svg"/></a></div><div class="w-layout-cell" id="w-node-b9406a90-d7d3-c30c-f2d7-196362057b90-079ab771"><a class="w-inline-block" href="https://www.youtube.com/@wabliefteru_podcast" target="_blank"><img src="./images/icons8-youtube.svg"/></a></div></div><div class="paragraph copyrights">© Wabliefteru? (en misschien een beetje de Volksjury, niet boos zijn asjeblieft, dit is enkel maar een mopje)</div></div></section><script crossorigin="anonymous" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66d75722586d170d079ab71e" type="text/javascript"></script><script src="script.js" type="text/javascript"></script></body></html>
+<!-- Last Published: Sun Sep 08 2024 20:49:20 GMT+0000 (Coordinated Universal Time) -->
+<html data-ff-page="66d75722586d170d079ab771">
+
+<head>
+    <meta charset="utf-8" />
+    <title>volksjuryrip</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link crossorigin="anonymous" href="https://fonts.gstatic.com" rel="preconnect" />
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+    <script
+        type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"] } });</script>
+    <script
+        type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
+    <link href="./images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="./images/webclip.png" rel="apple-touch-icon" />
+</head>
+
+<body class="body">
+    <div class="section" data-w-id="7972d193-5b62-5d55-2c16-cf8a113af2ea">
+        <div class="first-image" data-w-id="90e5916e-2a6a-832e-2b72-41d6965bde70"></div>
+    </div>
+    <section class="section divider pink">
+        <div class="w-layout-blockcontainer container w-container">
+            <div class="title-div">
+                <h1 class="h1">Dag lieve <br />volksjury fan!</h1>
+                <h2 class="h2">Wij zijn niet de meiden van de volksjury...<br /></h2>
+            </div>
+        </div>
+    </section>
+    <div class="section second-image" data-w-id="116f5406-1079-3236-dc55-b25abfc4d756">
+        <div class="second-image"></div>
+    </div>
+    <section class="section about">
+        <div class="w-layout-blockcontainer container w-container">
+            <h2 class="h1 green">De Wabliefteru Podcast</h2>
+            <div class="info-div"><img src="./images/fotoklein.webp" width="570" />
+                <div class="txt-div">
+                    <div class="rich-text-block w-richtext">
+                        <h3 class="h3">Een belachelijk interessante podcast</h3>
+                        <p class="paragraph about">Zoals de slimste onder jullie wellicht wel hebben opgemerkt, wij zijn
+                            niet de volksjury... wij zijn Stephan, Yorrick, Maarten en Alexander van
+                            <strong>Wabliefteru?</strong></p>
+                        <p class="paragraph about">Vier vrienden met één passie: lullen en lachen. </p>
+                        <p class="paragraph about">Elke week brengt één van de jongens een nieuw onderwerp, van het
+                            leven van Leonardo da Vinci tot paradoxale wiskunde of van de Zillion discotheek tot
+                            bloederige bijlmoordenaars. </p>
+                        <p class="paragraph">Ben je dus fan van de volksjury en zoek je nog een extra podcast in
+                            diezelfde aard</p>
+                        <p class="paragraph">(met meer afleveringen en ook frequentere nieuwe afleveringen want wij
+                            brengen elke week een nieuwe aflevering uit, niet pas om de twee weken!)</p>
+                        <p class="paragraph">staak dan je zoeken! JE HEBT ONS GEVONDEN!</p>
+                        <p class="paragraph about">Gestart in 2020, is 'Wabliefteru?' uitgegroeid tot een wekelijkse
+                            bron van leerrijk plezier. Kom lachen, leren en luisteren naar Stephan, Yorrick, Maarten en
+                            Alexander!</p>
+                        <p class="paragraph about">Wij hebben misschien nog geen 400.000 luisteraars maar dromen doet
+                            leven! Hopelijk zijn wij ooit ook zo succesvol als de volksjury. Maar tot dan moeten we het
+                            maar hebben van speciale marketingstechnieken zoals de fans van de volksjury in de val te
+                            lokken om ons publiek te doen groeien!</p>
+                    </div><a class="luisterbutton w-button"
+                        href="https://open.spotify.com/show/7163qoNT9QZ88uAKmIFk6C?si=ed49c124a67a43df"
+                        target="_blank">BELUIStER DE PODCAST</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section third" data-w-id="d840f857-09e1-17bb-1750-8cf3243c1daf">
+        <div class="third-image"></div>
+    </section>
+    <section class="section contact">
+        <div class="w-layout-blockcontainer container contact w-container">
+            <h2 class="h1 blue">Contact</h2>
+            <div class="p1 centered w-richtext">
+                <h2 class="h2 contact">All things business &amp; press</h2>
+                <p class="paragraph">WIj hebben (nog) geen managmentkantoor zoals Working Class Heroes achter ons
+                    staan... dus voor alle zakelijke vragen, samenwerkingen, bookings en persaanvragen kan je terecht
+                    bij ons email adres:</p>
+                <p class="paragraph"><a
+                        href="mailto:info@wabliefteru.be?subject=Hey%20lieve%20en%20mooie%20jongens%20van%20Wabliefteru%3F%20Podcast">info@wabliefteru.be</a>
+                </p>
+            </div>
+            <div class="p1 centered w-richtext">
+                <h2 class="h2 contact">Adverteren</h2>
+                <p class="paragraph">Wil je adverteren in onze podcast?</p>
+                <p class="paragraph">Dat kan en mag maar wij hebben ook nog geen advertienetwerk.</p>
+                <p class="paragraph">Dus ik zou zeggen stuur ons een mailtje en gratis stuff ofzo en dan regelen we wel
+                    iets. Alexander wil ook gerust iets laten tatoeëren op zijn kont voor het juiste bedrag... (het
+                    juiste bedrag ligt rond de €5)</p>
+            </div>
+            <div class="p1 centered w-richtext">
+                <h2 class="h2 contact">Suggesties &amp; comments</h2>
+                <p class="paragraph">Heb je een suggestie voor de podcast</p>
+                <p class="paragraph">Wil je graag een comment achterlaten?</p>
+                <p class="paragraph">Dan kan je terecht bij onze Facebook Community:</p>
+                <p class="paragraph">‍<a href="https://www.facebook.com/groups/wabliefteru" target="_blank">De
+                        Wabliefteru discussiegroep</a></p>
+            </div>
+        </div>
+    </section>
+    <section class="section socials">
+        <div class="w-layout-blockcontainer container socials w-container">
+            <h2 class="h1 red">Volg Wabliefteru?</h2>
+            <div class="w-layout-layout quick-stack wf-layout-layout"
+                id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba533-079ab771">
+                <div class="w-layout-cell cell" id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba534-079ab771"><a
+                        class="w-inline-block" href="https://www.instagram.com/wabliefteru_podcast/"
+                        target="_blank"><img src="./images/icons8-instagram.svg" width="Auto" height="35" /></a></div>
+                <div class="w-layout-cell" id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba535-079ab771"><a
+                        class="w-inline-block" href="https://www.tiktok.com/@wabliefteru_podcast" target="_blank"><img
+                            src="./images/tiktok-svgrepo-com.svg" width="Auto" height="35" /></a></div>
+                <div class="w-layout-cell" id="w-node-e7227b05-7c01-5325-b27c-e3fb47183782-079ab771"><a
+                        class="w-inline-block" href="https://www.facebook.com/wabliefteru" target="_blank"><img
+                            src="./images/icons8-facebook.svg" width="Auto" height="35" /></a></div>
+                <div class="w-layout-cell" id="w-node-a9690431-223d-ac78-d47b-93d8dbb51691-079ab771"><a
+                        class="w-inline-block" href="https://twitter.com/wabliefteru"><img
+                            src="./images/icons8-twitterx.svg" width="Auto" height="35" /></a></div>
+                <div class="w-layout-cell" id="w-node-_2ce8b8ee-e316-fc22-3cfd-5071155c93cd-079ab771"><a
+                        class="w-inline-block"
+                        href="https://open.spotify.com/show/7163qoNT9QZ88uAKmIFk6C?si=82874ec6cbcf4c79"
+                        target="_blank"><img src="./images/icons8-spotify.svg" width="Auto" height="35" /></a></div>
+                <div class="w-layout-cell" id="w-node-b9406a90-d7d3-c30c-f2d7-196362057b90-079ab771"><a
+                        class="w-inline-block" href="https://www.youtube.com/@wabliefteru_podcast" target="_blank"><img
+                            src="./images/icons8-youtube.svg" width="Auto" height="35" /></a></div>
+            </div>
+            <div class="paragraph copyrights">© Wabliefteru? (en misschien een beetje de Volksjury, niet boos zijn
+                asjeblieft, dit is enkel maar een mopje)</div>
+        </div>
+    </section>
+    <script crossorigin="anonymous" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=66d75722586d170d079ab71e"
+        type="text/javascript"></script>
+    <script src="script.js" type="text/javascript"></script>
+</body>
+
+</html>
