--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!-- Last Published: Sun Sep 08 2024 20:49:20 GMT+0000 (Coordinated Universal Time) -->
+<!-- Last Published: Wed Sep 11 2024 13:01:08 GMT+0000 (Coordinated Universal Time) -->
 <html data-ff-page="66d75722586d170d079ab771">
 
 <head>
@@ -20,19 +20,27 @@
 </head>
 
 <body class="body">
-    <div class="section" data-w-id="7972d193-5b62-5d55-2c16-cf8a113af2ea">
-        <div class="first-image" data-w-id="90e5916e-2a6a-832e-2b72-41d6965bde70"></div>
+    <div class="top-wrap">
+        <div class="top-target">
+            <div class="section">
+                <div class="first-image"></div>
+            </div>
+        </div>
+        <div class="top-trigger"></div>
     </div>
     <section class="section divider pink">
-        <div class="w-layout-blockcontainer container w-container">
+        <div class="w-layout-blockcontainer container topbanner w-container">
             <div class="title-div">
                 <h1 class="h1">Dag lieve <br />volksjury fan!</h1>
                 <h2 class="h2">Wij zijn niet de meiden van de volksjury...<br /></h2>
             </div>
         </div>
     </section>
-    <div class="section second-image" data-w-id="116f5406-1079-3236-dc55-b25abfc4d756">
-        <div class="second-image"></div>
+    <div class="scroll-wrap tweede">
+        <div class="scroll-target">
+            <div class="second-image"></div>
+        </div>
+        <div class="scroll-trigger"></div>
     </div>
     <section class="section about">
         <div class="w-layout-blockcontainer container w-container">
@@ -67,9 +75,12 @@
             </div>
         </div>
     </section>
-    <section class="section third" data-w-id="d840f857-09e1-17bb-1750-8cf3243c1daf">
-        <div class="third-image"></div>
-    </section>
+    <div class="scroll-wrap tweede">
+        <div class="scroll-target">
+            <div class="third-image"></div>
+        </div>
+        <div class="scroll-trigger"></div>
+    </div>
     <section class="section contact">
         <div class="w-layout-blockcontainer container contact w-container">
             <h2 class="h1 blue">Contact</h2>
@@ -107,23 +118,23 @@
                 id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba533-079ab771">
                 <div class="w-layout-cell cell" id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba534-079ab771"><a
                         class="w-inline-block" href="https://www.instagram.com/wabliefteru_podcast/"
-                        target="_blank"><img src="./images/icons8-instagram.svg" width="Auto" height="35" /></a></div>
+                        target="_blank"><img src="./images/icons8-instagram.svg" width="Auto" /></a></div>
                 <div class="w-layout-cell" id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba535-079ab771"><a
                         class="w-inline-block" href="https://www.tiktok.com/@wabliefteru_podcast" target="_blank"><img
-                            src="./images/tiktok-svgrepo-com.svg" width="Auto" height="35" /></a></div>
+                            src="./images/tiktok-svgrepo-com.svg" /></a></div>
                 <div class="w-layout-cell" id="w-node-e7227b05-7c01-5325-b27c-e3fb47183782-079ab771"><a
                         class="w-inline-block" href="https://www.facebook.com/wabliefteru" target="_blank"><img
-                            src="./images/icons8-facebook.svg" width="Auto" height="35" /></a></div>
+                            src="./images/icons8-facebook.svg" /></a></div>
                 <div class="w-layout-cell" id="w-node-a9690431-223d-ac78-d47b-93d8dbb51691-079ab771"><a
                         class="w-inline-block" href="https://twitter.com/wabliefteru"><img
-                            src="./images/icons8-twitterx.svg" width="Auto" height="35" /></a></div>
+                            src="./images/icons8-twitterx.svg" width="Auto" /></a></div>
                 <div class="w-layout-cell" id="w-node-_2ce8b8ee-e316-fc22-3cfd-5071155c93cd-079ab771"><a
                         class="w-inline-block"
                         href="https://open.spotify.com/show/7163qoNT9QZ88uAKmIFk6C?si=82874ec6cbcf4c79"
-                        target="_blank"><img src="./images/icons8-spotify.svg" width="Auto" height="35" /></a></div>
+                        target="_blank"><img src="./images/icons8-spotify.svg" /></a></div>
                 <div class="w-layout-cell" id="w-node-b9406a90-d7d3-c30c-f2d7-196362057b90-079ab771"><a
                         class="w-inline-block" href="https://www.youtube.com/@wabliefteru_podcast" target="_blank"><img
-                            src="./images/icons8-youtube.svg" width="Auto" height="35" /></a></div>
+                            src="./images/icons8-youtube.svg" /></a></div>
             </div>
             <div class="paragraph copyrights">© Wabliefteru? (en misschien een beetje de Volksjury, niet boos zijn
                 asjeblieft, dit is enkel maar een mopje)</div>
