--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>volksjuryrip</title>
+    <title> ̶d̶e̶ ̶v̶o̶l̶k̶s̶j̶u̶r̶y̶ ̶</title>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -16,7 +16,6 @@
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
     <link href="./images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link href="./images/webclip.png" rel="apple-touch-icon" />
 </head>
 
 <body class="body">
