--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             src="./images/icons8-youtube.svg" /></a></div>
             </div>
             <div class="paragraph copyrights">© Wabliefteru? (en misschien een beetje de Volksjury, niet boos zijn
-                asjeblieft, dit is enkel maar een mopje)</div>
+                asjeblieft, dit is enkel maar een mopje... love you)</div>
         </div>
     </section>
     <script crossorigin="anonymous" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
