--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="txt-div">
                     <div class="rich-text-block w-richtext">
                         <h3 class="h3">Een belachelijk interessante podcast</h3>
-                        <p class="paragraph about">Zoals de slimste onder jullie wellicht wel hebben opgemerkt, wij zijn
+                        <p class="paragraph about">Zoals de slimste onder jullie wellicht wel hebben opgemerkt, zijn wij
                             niet de volksjury... wij zijn Stephan, Yorrick, Maarten en Alexander van
                             <strong>Wabliefteru?</strong></p>
                         <p class="paragraph about">Vier vrienden met één passie: lullen en lachen. </p>
@@ -65,11 +65,11 @@
                             Alexander!</p>
                         <p class="paragraph about">Wij hebben misschien nog geen 400.000 luisteraars maar dromen doet
                             leven! Hopelijk zijn wij ooit ook zo succesvol als de volksjury. Maar tot dan moeten we het
-                            maar hebben van speciale marketingstechnieken zoals de fans van de volksjury in de val te
+                            maar hebben van speciale marketingstechnieken zoals de fans van de volksjury in de val 
                             lokken om ons publiek te doen groeien!</p>
                     </div><a class="luisterbutton w-button"
                         href="https://open.spotify.com/show/7163qoNT9QZ88uAKmIFk6C?si=ed49c124a67a43df"
-                        target="_blank">BELUIStER DE PODCAST</a>
+                        target="_blank">BELUISTER DE PODCAST</a>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
             <h2 class="h1 blue">Contact</h2>
             <div class="p1 centered w-richtext">
                 <h2 class="h2 contact">All things business &amp; press</h2>
-                <p class="paragraph">WIj hebben (nog) geen managmentkantoor zoals Working Class Heroes achter ons
+                <p class="paragraph">Wij hebben (nog) geen managmentkantoor zoals Working Class Heroes achter ons
                     staan... dus voor alle zakelijke vragen, samenwerkingen, bookings en persaanvragen kan je terecht
                     bij ons email adres:</p>
                 <p class="paragraph"><a
@@ -97,7 +97,7 @@
                 <p class="paragraph">Wil je adverteren in onze podcast?</p>
                 <p class="paragraph">Dat kan en mag maar wij hebben ook nog geen advertienetwerk.</p>
                 <p class="paragraph">Dus ik zou zeggen stuur ons een mailtje en gratis stuff ofzo en dan regelen we wel
-                    iets. Alexander wil ook gerust iets laten tatoeëren op zijn kont voor het juiste bedrag... (het
+                    iets. Alexander wil ook gerust iets laten tatoeëren op zijn kont voor het juiste bedrag... (TIP: het
                     juiste bedrag ligt rond de €5)</p>
             </div>
             <div class="p1 centered w-richtext">
