--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h2 class="h1 red">Volg Wabliefteru?</h2>
             <div class="w-layout-layout quick-stack wf-layout-layout"
                 id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba533-079ab771">
-                <div class="w-layout-cell cell" id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba534-079ab771 instagram-knop"><a
-                        class="w-inline-block" href="https://www.instagram.com/wabliefteru_podcast/"
+                <div class="w-layout-cell cell" id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba534-079ab771"><a
+                        class="w-inline-block" id="instagram-knop" href="https://www.instagram.com/wabliefteru_podcast/"
                         target="_blank"><img src="./images/icons8-instagram.svg" width="Auto" /></a></div>
                 <div class="w-layout-cell" id="w-node-_08b05b92-d190-2d80-74ac-acebd0bba535-079ab771"><a
                         class="w-inline-block" href="https://www.tiktok.com/@wabliefteru_podcast" target="_blank"><img
